introduce primitive collection api, removing dependency to trove in code
working on compilation